--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.2
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.4
 django-filter==21.1
+django-heroku==0.3.1
 django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
@@ -16,6 +18,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-nested-routers==0.93.4
 drf-yasg==1.20.0
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
@@ -25,6 +28,7 @@ mysqlclient==2.1.0
 oauthlib==3.2.0
 openapi-codec==1.3.2
 packaging==21.3
+psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
@@ -41,3 +45,4 @@ social-auth-core==4.2.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
+whitenoise==6.1.0
